--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -30,18 +30,18 @@
     owner=postgres
     group=postgres
   with_items:
-    - /data/data/database
+    - "{{ data_dir }}/database"
     - /data/log/database
 
 - name: Check if database has been initialized
   become: yes
-  stat: path=/data/data/database/pg_hba.conf
+  stat: path={{ data_dir }}/database/pg_hba.conf
   register: initial_db
 
 - name: Initialize database directory
   become: yes
   become_user: postgres
-  command:  /usr/lib/postgresql/13/bin/initdb --encoding=UTF8 --locale="en_US.UTF-8" -D /data/data/database
+  command:  /usr/lib/postgresql/13/bin/initdb --encoding=UTF8 --locale="en_US.UTF-8" -D {{ data_dir }}/database
   when: initial_db.stat.exists == False
 
 - name: Stop Postgresql before updating its configuration
