Extract out the root log directory to a variable

--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -39,7 +39,7 @@
     owner={{ ansible_user }}
     group={{ ansible_user }}
   with_items:
-    - /data/log/app/
+    - "{{ log_dir }}/app/"
     - "{{ data_dir }}/media/"
 
 - name: Setup a systemd script for gunicorn
