--- a/roles/api/tasks/main.yml
+++ b/roles/api/tasks/main.yml
@@ -17,7 +17,7 @@
     group={{ ansible_user }}
   with_items:
     - "{{ api_dir }}"
-    - /data/log/api/
+    - "{{ log_dir }}/api/"
     - "{{ data_dir }}/model_store/"
 
 - name: Fetch the source code for the API
