Move dependency from the api to the app role

--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -27,6 +27,7 @@
       - liblcms2-dev
       - libwebp-dev
       - graphviz-dev
+      - openslide-tools
     state: latest
     update_cache: yes
     cache_valid_time: 3600
