Update setup scripts to continue to run without warnings and errors

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ gathering=smart
 fact_caching=jsonfile
 fact_caching_timeout=21600
 fact_caching_connection=./cache
-callback_whitelist = profile_tasks
+callback_enabled = profile_tasks
 
 [ssh_connection]
 
